Core classes Added

--- a/src/JetStudy.WebApp/appsettings.json
+++ b/src/JetStudy.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-JetStudy.WebApp-8ca2b2d8-497b-4301-891d-e6acb3753c9e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "JetStudyConnection": "Server=.;Database=JetStudyWebAppDb;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
