--- a/src/JetStudy.WebApp/JetStudy.WebApp.csproj
+++ b/src/JetStudy.WebApp/JetStudy.WebApp.csproj
@@ -21,4 +21,14 @@
     <ProjectReference Include="..\JetStudy.Repositories\JetStudy.Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\course\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\img\course\no_cover.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
